--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-environment-jsdom": "^30.0.0-beta.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
