--- a/package.json
+++ b/package.json
@@ -27,22 +27,20 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.17",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
-    "postcss": "^8.4.35",
-    "postcss-preset-env": "^9.3.0",
     "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
