--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "openai": "^4.103.0",
     "prisma": "^6.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.57.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
