--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.0",
-    "@heroicons/react": "^2.1.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
