--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^7.1.1",
     "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
+    "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
