--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.24.11",
     "openai": "^4.103.0",
     "prisma": "^6.8.2",
+    "puppeteer": "^24.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.57.0"
